syntax = "proto3";

package sharehodl.equity.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/sharehodl/sharehodl-blockchain/api/sharehodl/equity/v1";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // CreateCompany creates a new company
  rpc CreateCompany(MsgCreateCompany) returns (MsgCreateCompanyResponse);
  
  // IssueShares issues shares to an investor
  rpc IssueShares(MsgIssueShares) returns (MsgIssueSharesResponse);
  
  // TransferShares transfers shares between accounts
  rpc TransferShares(MsgTransferShares) returns (MsgTransferSharesResponse);
  
  // DistributeDividends distributes dividends to shareholders
  rpc DistributeDividends(MsgDistributeDividends) returns (MsgDistributeDividendsResponse);
}

// MsgCreateCompany defines a message to create a new company
message MsgCreateCompany {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "sharehodl/equity/MsgCreateCompany";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string name = 2;
  string symbol = 3;
  uint64 shares = 4;
  string industry = 5;
  string valuation = 6 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// MsgCreateCompanyResponse defines the response structure for executing a MsgCreateCompany message
message MsgCreateCompanyResponse {
  string symbol = 1;
  uint64 total_shares = 2;
  string valuation = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
}

// MsgIssueShares defines a message to issue shares
message MsgIssueShares {
  option (cosmos.msg.v1.signer) = "issuer";
  option (amino.name) = "sharehodl/equity/MsgIssueShares";

  string issuer = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string recipient = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string symbol = 3;
  uint64 shares = 4;
}

// MsgIssueSharesResponse defines the response structure for executing a MsgIssueShares message
message MsgIssueSharesResponse {
  string symbol = 1;
  uint64 shares_issued = 2;
  string recipient = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgTransferShares defines a message to transfer shares
message MsgTransferShares {
  option (cosmos.msg.v1.signer) = "from";
  option (amino.name) = "sharehodl/equity/MsgTransferShares";

  string from = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string to = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string symbol = 3;
  uint64 shares = 4;
}

// MsgTransferSharesResponse defines the response structure for executing a MsgTransferShares message
message MsgTransferSharesResponse {
  string symbol = 1;
  uint64 shares_transferred = 2;
  string from = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string to = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgDistributeDividends defines a message to distribute dividends
message MsgDistributeDividends {
  option (cosmos.msg.v1.signer) = "distributor";
  option (amino.name) = "sharehodl/equity/MsgDistributeDividends";

  string distributor = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string symbol = 2;
  cosmos.base.v1beta1.Coin total_amount = 3 [(gogoproto.nullable) = false];
  string payment_denom = 4;
}

// MsgDistributeDividendsResponse defines the response structure for executing a MsgDistributeDividends message
message MsgDistributeDividendsResponse {
  string symbol = 1;
  cosmos.base.v1beta1.Coin total_distributed = 2 [(gogoproto.nullable) = false];
  uint64 shareholders_paid = 3;
  string per_share_amount = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}